--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   iconsax: ^0.0.8
   flutter_advanced_drawer: ^1.3.2
   workmanager: ^0.5.0
+  fl_chart: ^0.55.2
 
 dev_dependencies:
   flutter_test:
