--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_advanced_drawer: ^1.3.2
   workmanager: ^0.5.0
   fl_chart: ^0.55.2
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
