--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   workmanager: ^0.5.0
   fl_chart: ^0.55.2
   flutter_easyloading: ^3.0.5
+  local_auth: ^2.1.2
 
 dev_dependencies:
   flutter_test:
