--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   fl_chart: ^0.55.2
   flutter_easyloading: ^3.0.5
   local_auth: ^2.1.2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
