--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.finsoft2">
+    package="com.doriionline.findo">
     <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
    <application
         android:label="finsoft2"
