--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = finsoft2
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.finsoft2
+PRODUCT_BUNDLE_IDENTIFIER = com.doriionline.findo
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
